--- a/html/cars.html
+++ b/html/cars.html
@@ -29,17 +29,17 @@
       <!-- CAR CARD -->
       <div class="shadow border w-full overflow-hidden mb-5 cursor-pointer h-[200px]">
         <div class="flex h-full">
-          <img
+          <NuxtImg
             src="https://cdni.autocarindia.com/utils/imageresizer.ashx?n=https://cms.haymarketindia.net/model/uploads/modelimages/Pravaig-Defy-281120221416.jpg"
-            alt="" class="w-[300px] h-full">
-          <div class="p-4 flex flex-col">
-            <div>
-              <h1 class="text-2xl text-blue-700">Volvo</h1>
-              <p class="text-gray-700">
-                Lorem ipsum dolor sit amet consectetur</p>
+            alt="" class="w-[300px] h-full /">
+            <div class="p-4 flex flex-col">
+              <div>
+                <h1 class="text-2xl text-blue-700">Volvo</h1>
+                <p class="text-gray-700">
+                  Lorem ipsum dolor sit amet consectetur</p>
+              </div>
+              <h1 class="mt-auto text-xl">39,555</h1>
             </div>
-            <h1 class="mt-auto text-xl">39,555</h1>
-          </div>
         </div>
       </div>
       <!-- CAR CARD -->
